--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Currency Finder</title>
+    <title>Crypto Connect</title>
     <link href="bootstrap.min.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
 </head>
@@ -12,11 +12,12 @@
     <div class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Currency Finder</a>
+                <a class="navbar-brand" href="#">Crypto Connect</a>
             </div>
         </div>
     </div>
-    <div id="container" class="container"></div>
+    <div id="live-stream" class="container"></div>
+    <div id="user-content" class="container"></div>
     <script src="main.js"></script>
 </body>
 
